# university-rank-information

./: CMakeLists.txt  IvyLeague.cpp  IvyLeague.h  README.md  TopKoreaUniversityCollection.cpp  TopKoreaUniversityCollection.h  University.cpp  University.h  UniversityCollection.cpp  UniversityCollection.h  UniversityManager.cpp  UniversityManager.h  main.cpp  players_fifa23.csv  universities.csv
